app/assets/stylesheets/pages.scss
// Place all the styles related to the pages controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

.parallax.first {
    background-image: url("DSC_0345.jpg");
}
.parallax.second {
    background-image: url("DSC_0323.jpg");
}
.parallax.third {
    background-image: url("DSC_0311.jpg");
}

.parallax {
    min-height: 500px;
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.parallax-text {
    display: grid;
    grid-template-rows: 50% 50%;
    grid-template-columns: auto;
}

.home-button {
    background-color: white;
    border: 0px;
    border-radius: 0px;
    opacity: 0.7;
    color: black;
    margin: 0 auto;
    display: inline-block;
}

.home-UIbuttons {
    margin: 0 auto;
    font-family: 'Domine', serif;
}

#title {
    font-family: 'Amatic SC', cursive;
    font-size: 65px;
}

#subtitle {
    font-size: 30px;
    font-family: 'Domine', serif;
}

.swim-test-subtext {
    padding: 10px;
}

.collapsible {
    color: black;
    background-color: white;
    border: 1px solid darkgreen;
    cursor: pointer;
}

.collapsible:hover {
    background-color: darkgreen;
    color: white;
    border: 1px solid white;
}

.table-content-collapse {
    display: none;
    border: none;
    overflow: hidden;
}

.table-content-collapse.table.table-bordered.table-sm {
    margin-top: 10px;
    td {
        width: 25%;
    }
}

.home-section {
    display: inline-block;
}

.UIlinks {
    padding: 15px;
}

